--- a/newsletter-bundle/src/Resources/contao/languages/lv/tl_newsletter.xlf
+++ b/newsletter-bundle/src/Resources/contao/languages/lv/tl_newsletter.xlf
@@ -3,263 +3,263 @@
     <body>
       <trans-unit id="tl_newsletter.subject.0">
         <source>Subject</source>
-        <target>Aihe</target>
+        <target>Temats</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.subject.1">
         <source>Please enter the newsletter subject.</source>
-        <target>Ole hyvä ja anna uutiskirjeelle aihe.</target>
+        <target>Lūdzu ievadiet apkārtraksta tematu.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.alias.0">
         <source>Newsletter alias</source>
-        <target>Alias</target>
+        <target>Biļetena aizstājējvārds</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.alias.1">
         <source>The newsletter alias is a unique reference to the newsletter which can be called instead of its numeric ID.</source>
-        <target>Alias on yksilöllinen viite jolla uutiskirjettä voidaan kutsua sen numeerisen tunnisteen sijasta.</target>
+        <target>Biļetens aizstājējvārds ir unikāla atsauce uz jaunumiem, ko var izsaukt pēc tā nosaukuma, nevis pēc tā ciparu ID.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.content.0">
         <source>HTML content</source>
-        <target>HTML-sisältö</target>
+        <target>HTML saturs</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.content.1">
         <source>Here you can enter the HTML content of the newsletter. Use the wildcard &lt;em&gt;##email##&lt;/em&gt; to insert the recipient's e-mail address.</source>
-        <target>Tähän voit antaa uutiskirjeen HTML-sisällön. Käytä villikorttia &lt;em&gt;##email##&lt;/em&gt; vastaanottajan sähköpostiosoitteen sijasta.</target>
+        <target>Šeit varat ievadīt HTML saturu biļetenam. Izmantojiet aizstājējzīmes &lt;em&gt;##email##&lt;/em&gt;, lai ievietotu adresāta e-pasta adresi.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.text.0">
         <source>Text content</source>
-        <target>Tekstisisältö</target>
+        <target>Teksta saturs</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.text.1">
         <source>Here you can enter the text content of the newsletter. Use the wildcard &lt;em&gt;##email##&lt;/em&gt; to insert the recipient's e-mail address.</source>
-        <target>Tähän voit antaa uutiskirjeen tekstisisällön. Käytä villikorttia &lt;em&gt;##email##&lt;/em&gt; vastaanottajan sähköpostiosoitteen sijasta.</target>
+        <target>Šeit varat ievadīt biļetenā saturu, jeb - tekstu. Izmantojiet aizstājējzīmes &lt;em&gt;##email##&lt;/em&gt;, lai ievietotu adresāta e-pasta adresi.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.addFile.0">
         <source>Add attachments</source>
-        <target>Lisää liitteitä</target>
+        <target>Pievienot pielikumus</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.addFile.1">
         <source>Attach one or more files to the newsletter.</source>
-        <target>Liitä tiedostoja uutiskirjeeseen.</target>
+        <target>Pievienot vienu vai vairākas datnes apkārtrakstam.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.files.0">
         <source>Attachments</source>
-        <target>Liitteet</target>
+        <target>Pielikumi</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.files.1">
         <source>Please choose the files to be attached from the files directory.</source>
-        <target>Ole hyvä ja valitse liitettävät tiedostot.</target>
+        <target>Lūdzu, izvēlieties failus, ko pievienot no failiem direktorijā.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.template.0">
         <source>E-mail template</source>
-        <target>Viestin mallipohja</target>
+        <target>E-pasta veidne</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.template.1">
         <source>Here you can choose the e-mail template.</source>
-        <target>Täällä voit valita viestin mallipohjan.</target>
+        <target>Varat izvēlēties e-pasta veidni.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.sendText.0">
         <source>Send as plain text</source>
-        <target>Lähetä pelkkänä tekstinä</target>
+        <target>Sūtīt kā vienkāršu tekstu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.sendText.1">
         <source>Send the newsletter as plain text e-mail without the HTML content.</source>
-        <target>Lähetä uutiskirje pelkkänä tekstinä ilman HTML-sisältöä.</target>
+        <target>Sūtīt biļetenu kā vienkārša teksta e-pastu, neizmantojot HTML saturu.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.externalImages.0">
         <source>External images</source>
-        <target>Ulkoiset kuvat</target>
+        <target>Ārējie attēli</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.externalImages.1">
         <source>Do not embed images in HTML newsletters.</source>
-        <target>Älä yhdistä kuvia HTML-uutiskirjeissä.</target>
+        <target>Neieguldiet HTML biļetenos attēlus.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.senderName.0">
         <source>Sender name</source>
-        <target>Lähettäjän nimi</target>
+        <target>Nosūtītāju vārds</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.senderName.1">
         <source>Here you can enter the sender's name.</source>
-        <target>Tähän voit antaa lähettäjän nimen.</target>
+        <target>Šeit jūs varat ievadīt nosūtītāja vārdu.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.sender.0">
         <source>Sender address</source>
-        <target>Lähettäjän osoite</target>
+        <target>Nosūtītāja adrese</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.sender.1">
         <source>Here you can enter a custom sender address.</source>
-        <target>Tähän voit antaa lähettäjän osoitteen.</target>
+        <target>Šeit jūs varat ievadīt pielāgotu nosūtītāja adresi.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.mailsPerCycle.0">
         <source>Mails per cycle</source>
-        <target>Viestiä / sykli</target>
+        <target>Vēstules ciklā</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.mailsPerCycle.1">
         <source>The sending process is split into several cycles to prevent the script from timing out.</source>
-        <target>Lähetystapahtuma on jaettu useaan sykliin, mikä estää skriptin suorituksen aikakatkaisun.</target>
+        <target>Sūtīšanas process ir sadalīts vairākos ciklos, lai novērstu skripta izpildes noildzi.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.timeout.0">
         <source>Timeout in seconds</source>
-        <target>Aikakatkaisu sekunneissa</target>
+        <target>Noildze sekundēs</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.timeout.1">
         <source>Here you can modify the waiting time between each cycle to control the number of e-mails per minute.</source>
-        <target>Täällä voit säätää odotusaikaa syklien välissä. Siten hallitaan kuinka monta sähköpostia lähetetään minuutissa.</target>
+        <target>Šeit jūs varat mainīt gaidīšanas laiks starp katru ciklu, lai kontrolētu minūtē nosūtāmo e-pastu skaitu.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.start.0">
         <source>Offset</source>
-        <target>Poikkeama</target>
+        <target>Kompensācija (Offset)</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.start.1">
         <source>In case the sending process is interrupted, you can enter a numeric offset here to continue with a particular recipient. You can check how many mails have been sent in the &lt;em&gt;system/logs/newsletter_*.log&lt;/em&gt; file. E.g., if 120 mails have been sent, enter &quot;120&quot; to continue with the 121st recipient (counting starts at 0).</source>
-        <target>Jos lähetys keskeytyy, voit syöttää tähän numeron, jolloin lähetystä jatketaan numeroidun vastaanottajan kohdalta. Voit tarkistaa &lt;em&gt;system/logs/newsletter_*.log&lt;/em&gt;-tiedostosta kuinka monta sähköpostia ehti lähteä. Esim. jos 120 viestiä ehti lähteä, kirjoita kentään &quot;120&quot;, joilloin lähetystä jatketaan 121. vastaanottajan kohdalta (ensimmäinen vastaanottaja on 0.).</target>
+        <target>Gadījumā, ja nosūtīšana ir pārtraukta, jūs varat šeit ievadīt skaitlisku kompensāciju, lai turpinātu ar konkrētu adresātu. Varat pārbaudīt, cik daudzas vēstules ir nosūtītas &lt;em&gt;system/logs/newsletter_*.log&lt;/em&gt; failā. Piemēram, ja nosūtīti 120 e-pasta sūtījumi, un lai turpinātu ar 121.saņēmēju (vispār skaitīšana sākas ar 0), ieraksta &quot;120&quot;.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.sendPreviewTo.0">
         <source>Send preview to</source>
-        <target>Lähetä esikatseluviesti</target>
+        <target>Nosūtīt priekšskatījumu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.sendPreviewTo.1">
         <source>Send the preview of the newsletter to this e-mail address.</source>
-        <target>Lähetä esikatseluviesti tähän sähköpostiosoitteeseen.</target>
+        <target>Nosūtīt apkārtraksta priekšskatījumu uz šo e-pasta adresi.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.title_legend">
         <source>Title and subject</source>
-        <target>Otsikko ja aihe</target>
+        <target>Virsraksts un temats</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.html_legend">
         <source>HTML content</source>
-        <target>HTML-sisältö</target>
+        <target>HTML saturs</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.text_legend">
         <source>Text content</source>
-        <target>Tekstisisältö</target>
+        <target>Teksta saturs</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.attachment_legend">
         <source>Attachments</source>
-        <target>Liitteet</target>
+        <target>Pielikums</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.template_legend">
         <source>Template settings</source>
-        <target>Mallin asetukset</target>
+        <target>Veidnes uzstādījumi</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.expert_legend">
         <source>Expert settings</source>
-        <target>Erikoisasetukset</target>
+        <target>Eksperta uzstādījumi</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.sent">
         <source>Sent</source>
-        <target>Lähetetty</target>
+        <target>Nosūtīts</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.sentOn">
         <source>Sent on %s</source>
-        <target>Lähetetty %s</target>
+        <target>Nosūtīts %s</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.notSent">
         <source>Not sent yet</source>
-        <target>Ei vielä lähetetty</target>
+        <target>Nav vel izsūtīts</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.mailingDate">
         <source>Mailing date</source>
-        <target>Postituspäivä</target>
+        <target>Izsūtīšanas datums</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.confirm">
         <source>The newsletter has been sent to %s recipients.</source>
-        <target>Uutiskirje on lähetetty %s vastaanottajalle.</target>
+        <target>Biļetens ir nosūtīts% s saņēmējiem.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.rejected">
         <source>%s invalid e-mail address(es) has/have been disabled (see system log).</source>
-        <target>%s viallista sähköpostiosoitetta on poistettu käytöstä. Lisätietoja järjestelmän lokista.</target>
+        <target>% s nederīga e-pasta adrese (-es) ir/tika izslēgta (sk. sistēmas log).</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.error">
         <source>There are no active subscribers to the channel.</source>
-        <target>Kanavalla ei ole yhtään aktiivista tilaajaa.</target>
+        <target>Nav aktīvo abonentu uz kanālu.</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.from">
         <source>From</source>
-        <target>Lähettäjä</target>
+        <target>No</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.attachments">
         <source>Attachments</source>
-        <target>Liitteet</target>
+        <target>Pielikumi</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.preview">
         <source>Send preview</source>
-        <target>Esikatselu</target>
+        <target>Sūtīt priekšskatījumu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.sendConfirm">
         <source>Do you really want to send the newsletter?</source>
-        <target>Haluatko varmasti lähettää uutiskirjeen?</target>
+        <target>Vai tiešām vēlaties nosūtīt apkārtrakstu?</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.new.0">
         <source>New newsletter</source>
-        <target>Uusi uutiskirje</target>
+        <target>Jauns apkārtraksts</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.new.1">
         <source>Create a new newsletter</source>
-        <target>Luo uusi uutiskirje</target>
+        <target>Izveidot jaunu apkārtrakstu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.show.0">
         <source>Newsletter details</source>
-        <target>Uutiskirjeen tarkemmat tiedot</target>
+        <target>Apkārtraksta detaļas</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.show.1">
         <source>Show the details of newsletter ID %s</source>
-        <target>Näytä uutiskirjeen tarkemmat tiedot</target>
+        <target>Parādīt apkārtraksta ID %s detaļas</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.edit.0">
         <source>Edit newsletter</source>
-        <target>Muokkaa uutiskirjettä</target>
+        <target>Rediģēt apkārtrakstu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.edit.1">
         <source>Edit newsletter ID %s</source>
-        <target>Muokkaa uutiskirjettä ID %s</target>
+        <target>Rediģēt apkārtrakstu ID %s</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.copy.0">
         <source>Duplicate newsletter</source>
-        <target>Kopioi uutiskirje</target>
+        <target>Dublēt apkārtrakstu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.copy.1">
         <source>Duplicate newsletter ID %s</source>
-        <target>Kopioi uutiskirje ID %s</target>
+        <target>Dublēt apkārtrakstu ID %s</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.cut.0">
         <source>Move newsletter</source>
-        <target>Siirrä uutiskirje</target>
+        <target>Pārvietot apkārtrakstu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.cut.1">
         <source>Move newsletter ID %s</source>
-        <target>Siirrä uutiskirje ID %s</target>
+        <target>Pārvietot apkārtrakstu ID %s</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.delete.0">
         <source>Delete newsletter</source>
-        <target>Poista uutiskirje</target>
+        <target>Dzēst apkārtrakstu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.delete.1">
         <source>Delete newsletter ID %s</source>
-        <target>Poista uutiskirje ID %s</target>
+        <target>Dzēst apkārtrakstu ID %s</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.editheader.0">
         <source>Edit channel</source>
-        <target>Muokkaa kanavaa</target>
+        <target>Rediģēt kanālu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.editheader.1">
         <source>Edit the channel settings</source>
-        <target>Muokkaa kanavan asetuksia</target>
+        <target>Rediģēt kanāla uzstādījumus</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.pasteafter.0">
         <source>Paste into this channel</source>
-        <target>Liitä tähän kanavaan</target>
+        <target>Ielīmēt šajā kanāla</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.pasteafter.1">
         <source>Paste after newsletter ID %s</source>
-        <target>Liitä uutiskirjeen ID %s perään</target>
+        <target>Ielīmēt aiz apkārtraksta ID %s</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.send.0">
         <source>Send newsletter</source>
-        <target>Lähetä uutiskirje</target>
+        <target>Sūtīt apkārtrakstu</target>
       </trans-unit>
       <trans-unit id="tl_newsletter.send.1">
         <source>Send newsletter ID %s</source>
-        <target>Lähetä uutiskirje ID %s</target>
+        <target>Sūtīt apkārtrakstu ID %s</target>
       </trans-unit>
     </body>
   </file>
